--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "dependencies": {
     "next": "13.5.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "canvas-confetti": "1.6.0",
+    "eslint": "8.48.0",
+    "eslint-config-next": "13.4.19"
   },
   "devDependencies": {
     "@types/node": "^20",
