--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
     "lint:eslint": "npm run lint"
   },
   "dependencies": {
-    "next": "13.5.4",
-    "react": "^18",
-    "react-dom": "^18",
     "canvas-confetti": "1.6.0",
     "eslint": "8.48.0",
-    "eslint-config-next": "13.4.19"
+    "eslint-config-next": "13.4.19",
+    "next": "13.5.4",
+    "react": "^18",
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -27,6 +27,6 @@
     "postcss": "^8",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "^3.3.3",
-    "typescript": "^5"
+    "typescript": "^5.2.2"
   }
 }
